--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
     "analyze": "source-map-explorer \"build/static/js/*.js\"",
     "build:css": "postcss src/styles/index.css -o src/index.css",
     "watch:css": "postcss src/styles/index.css -o src/index.css -w",
-    "start": "react-scripts start",
     "build": "npm run build:css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "dev": "concurrently --kill-others \"npm run watch:css\" \"npm start\""
+    "start": "concurrently --kill-others \"npm run watch:css\" \"npm start\""
   },
   "eslintConfig": {
     "extends": "react-app"
