--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "npm run build:css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "start": "concurrently --kill-others \"npm run watch:css\" \"npm start\""
+    "start": "concurrently --kill-others \"npm run watch:css\" \"react-scripts start\""
   },
   "eslintConfig": {
     "extends": "react-app"
